# Active-Desktop

./: CMakeLists.txt  README.md  main.cpp  splitter_anchor.cpp  splitter_anchor.h  terminal.cpp  terminal.h  tool_manager.cpp  tool_manager.h  tool_seperator.cpp  tool_seperator.h  video_item.cpp  video_item.h  video_player.cpp  video_player.h  video_player_slider.cpp  video_player_slider.h
